bootstrap/argo-cd/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  name: argocd-server
spec:
  ports:
  - name: http
    port: 80
    # protocol: TCP
    # targetPort: 8000
  - name: https
    port: 443
    # protocol: TCP
    # targetPort: 8443
  selector:
    app.kubernetes.io/name: argocd-server
